# docker-didkit

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Justfile  LICENSE  Makefile  README.md  cliff.toml  flake.nix  manifest.json
didkit/: Cargo.toml  default.nix
